# linkely

./: .gitignore  Dockerfile  README.md  api.md  compose.yml  docker-compose.yml  entrypoint.sh  example.env  nginx.conf  pyproject.toml  requirements.txt
docker/static_web/: lighttpd.conf
docker/web/: Dockerfile
frontend/: semantic.json
linkely/: manage.py  requirements.txt
linkely/linkely/: settings.py  urls.py  wsgi.py
linkely/links/: models.py  scraper.py  serializers.py  tests.py  urls.py  views.py  wiring.py
linkely/links/management/commands/: remove_duplicates.py  rescrape.py
linkely/links/migrations/: 0001_initial.py  0002_auto_20170716_2315.py  0003_add_root_user.py  0004_follow.py  0005_auto_20210106_1736.py
linkely/links/templates/: base.html  menu.html
linkely/links/templates/links/: article_list_item.html  header.html  index.html  menu.html  search_form.html  search_result.html  user.html
linkely/links/templates/login/: login.html
linkely/links/templatetags/: links_extras.py
linkely/links/validators/: __init__.py  _password_validator.py
linkely/static/: main.css  main.js
linkely/static/semantic/: semantic.css  semantic.min.css
