[tool.poetry]
name = "linkely"
version = "0.1.0"
description = "Share and save links"
authors = ["Narjis Hachilif <hnarjis@gmail.com>", "André Laszlo <andre@laszlo.nu>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
elasticsearch7 = "^7.10.1"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
