[tool.poetry]
name = "linkely"
version = "0.1.0"
description = "Share and save links"
authors = ["Narjis Hachilif <hnarjis@gmail.com>", "André Laszlo <andre@laszlo.nu>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
elasticsearch7 = "^7.10.1"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
python-memcached = "^1.59"
django-cors-headers = "^3.7.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
ipython = "7.19.0"
jedi = "0.17.2"
parso = "0.7.1"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
  )/
  | /.*/migrations/.*
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

